--- a/iPuppy-Tech.css
+++ b/iPuppy-Tech.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("../images/pexels-pixabay-316093.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("https://ik.imagekit.io/ipuppyyt/pexels-pixabay-316093_i45-63CU0.jpg");
   background-position: 50% 50%;
 }
 
