--- a/socialstyles.css
+++ b/socialstyles.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url("images/ed9049d225fbd3d2bf544121bf6a0507d45c388f1a4def4bb80e0363cdc7ffa4786e6c82f559d4cbb9077af95f36b51f605259445795f08a2699cd_1280.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url("https://ik.imagekit.io/ipuppyyt/ed9049d225fbd3d2bf544121bf6a0507d45c388f1a4def4bb80e0363cdc7ffa4786e6c82f559d4cbb9077af95f36b51f605259445795f08a2699cd_1280_u07jt4Yo-.jpg");
   background-position: 50% 50%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
