--- a/socialstyles-main.css
+++ b/socialstyles-main.css
@@ -6,6 +6,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  min-height: 100vh;
 }
 
 .u-section-1 .u-sheet-1 {
